syntax = "proto3";

package proto;

option go_package = ".;pb";

service FileService {
  rpc Upload(stream UploadRequest) returns (UploadResponse) {}
  rpc Download(DownloadRequest) returns (stream DownloadResponse) {}
}

service ListService {
  rpc GetFiles(GetFilesRequest) returns (GetFilesResponse) {}
}

message DownloadRequest {
}

message DownloadResponse {
  bytes fragment = 1;
}

message UploadRequest {
  bytes fragment = 1;
}

message UploadResponse {
}

message GetFilesRequest {}

message GetFilesResponse{
  string info = 1;
}